Lecture-6/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: <host>
    http:
      paths:
      - backend:
          serviceName: my-service
          servicePort: 80
        path: /
